# weatheringnet

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: ali_config.yaml  model_config.yaml  synthetic_params.yaml
data/: README.md
docs/: CONTRIBUTING.md  DECISIONS.md  weatheringnet_master_checklist.md
scripts/: download_nhanes.py  power_analysis.py
tests/unit/: test_ali_calculator.py  test_dag.py
weatheringnet/: __init__.py  cli.py
weatheringnet/ali/: __init__.py  biomarkers.py  calculator.py  pipeline.py
weatheringnet/causal/: __init__.py  dag.py  mediation.py
weatheringnet/dashboard/backend/: main.py
weatheringnet/model/: __init__.py  explainer.py  trainer.py
weatheringnet/sdrs/: __init__.py  scorer.py  sources.py
weatheringnet/synthetic/: __init__.py  client.py
